My Backend Logic

--- a/server/routes/input.tex
+++ b/server/routes/input.tex
@@ -46,7 +46,7 @@
 \begin{table}[h!]
      \begin{center}
      \begin{tabular}{  l  p{10cm}  p{8cm}}
-	 \raisebox{-\totalheight}{\includegraphics[scale=.2]{C:/Users/deepm/Desktop/WebDevProjects/Web_App_for_resume_generation/server/routes/logoupdated.png}}
+	 \raisebox{-\totalheight}{\includegraphics[scale=.2]{C:/Users/nandha/Desktop/master/Web_App_for_resume_generation/server/routes/logoupdated.png}}
 	 &
 	 \begin{itemize}
 	 \setlength\itemsep{.01em}
@@ -56,7 +56,7 @@
 		\item[] \textbf{cs18m@iittp.ac.in}
 		\item[] \textbf{www.linkedin.com/in/linkedin-id}
 	\end{itemize}
- 	 
+
  	 \end{tabular}
 	 \end{center}
      \end{table}
@@ -81,13 +81,13 @@ Electronics \& Communication &  NIT Kurukshetra & 2018 & 8.24/10\\
 \begin{itemize}
   \setlength{\itemsep}{1pt}
   \item {{Computer Architecture, Multi-core Architecture, Embedded Systems, Signal Processing}}
- \end{itemize} 
+ \end{itemize}
 
 \colorbox{titleColor}{\parbox{6.7in}{\textbf{Technical Proficiency}}}\\
 
 \begin{tabular}{p{1.6in}p{0.1in}p{4.5in}}
   \textbf{\small{Operating Systems}} &: &{{Windows, Linux}} \\
-  
+
   \textbf{\small{Programming Languages}} &: &{{C, Python, C++, VHDL, Verilog}} \\
   \textbf{\small{Hardware Platforms}} &: &{{8051, 8086, ATMEL AVR, Altera EPM3064, MaxV 5M1270 CPLDs}} \\
   \textbf{\small{Softwares/Tools}} &: &{{Sniper, MATLAB, TortoiseHg, Visual Studio, \LaTeX}} \\
@@ -120,7 +120,7 @@ Electronics \& Communication &  NIT Kurukshetra & 2018 & 8.24/10\\
 
 \begin{itemize*}
   \setlength{\itemsep}{1pt}
-  \item \textbf{\small{Project 1}} \hfill {\small{{\textbf{[Mar '13 - Apr '13]}}}\/} 
+  \item \textbf{\small{Project 1}} \hfill {\small{{\textbf{[Mar '13 - Apr '13]}}}\/}
 \begin{itemize*}
 	\item a line or two about project.
 \end{itemize*}
@@ -128,7 +128,7 @@ Electronics \& Communication &  NIT Kurukshetra & 2018 & 8.24/10\\
 
 \begin{itemize*}
   \setlength{\itemsep}{1pt}
-  \item \textbf{\small{Project 2}} \hfill {\small{{\textbf{[Mar '13 - Apr '13]}}}\/} 
+  \item \textbf{\small{Project 2}} \hfill {\small{{\textbf{[Mar '13 - Apr '13]}}}\/}
 \begin{itemize*}
 	\item a line or two about project.
 \end{itemize*}
@@ -170,13 +170,13 @@ Resource Development, Government of India
 
 \colorbox{titleColor}{\parbox{6.7in}{\textbf{Positions of Responsibility}}}\\
 
-\textbf{Position, Club/ Event/ Institute}  \hfill {\small{{\textbf{[May '13 - April '14]}}}\/}                        
+\textbf{Position, Club/ Event/ Institute}  \hfill {\small{{\textbf{[May '13 - April '14]}}}\/}
 \begin{itemize*}
 \item key role of your position .
 \item a line or two about your work in that position.
 \end{itemize*}
 
-\textbf{Position, Club/ Event/ Institute}  \hfill {\small{{\textbf{[May '13 - April '14]}}}\/}                        
+\textbf{Position, Club/ Event/ Institute}  \hfill {\small{{\textbf{[May '13 - April '14]}}}\/}
 \begin{itemize*}
 \item key role of your position.
 \item a line or two about your work in that position.
@@ -186,8 +186,8 @@ Resource Development, Government of India
 
 \begin{itemize}
   \setlength{\itemsep}{1pt}
-  \item Activity1 \hfill {\small{{[Mar '19]}}\/} 
-  \item Activity2 \hfill {\small{{[Mar '19]}}\/} 
+  \item Activity1 \hfill {\small{{[Mar '19]}}\/}
+  \item Activity2 \hfill {\small{{[Mar '19]}}\/}
 \end{itemize}
 
 \colorbox{titleColor}{\parbox{6.7in}{\textbf{Hobbies and Interests}}}
@@ -196,6 +196,7 @@ Resource Development, Government of India
 \begin{itemize}
   \setlength{\itemsep}{1pt}
   \item Watching Documentaries, Reading Fiction and Non-Fiction books, Trekking, Solving Rubik Cube
+%Adding Hobbies and Interest
 \end{itemize}
 
 \textit{Updated on 22nd Jun 2020}
