Added Download Routes

--- a/server/routes/latex.tex
+++ b/server/routes/latex.tex
@@ -38,4 +38,36 @@ urlcolor=cyan
 
 \begin{document}
 
+\begin{table}[h!]
+
+\begin{center}
+\begin{tabular}{  l  p{10cm}  p{8cm}}
+\raisebox{-\totalheight}{\includegraphics[scale=.2]{C:/Users/deepm/Desktop/WebDevProjects/Web_App_for_resume_generation/server/routes/logoupdated.png}}
+&
+\begin{itemize}
+\setlength\itemsep{.01em}
+\item[] \textbf{Test}
+\item[] \textbf{B.Tech}
+\item[] \textbf{Indian Institute of Technology Tirupati, India}
+\item[] \textbf{test@gmail.com}
+\item[] \textbf{Test}
+\end{itemize}
+\end{tabular}
+\end{center}
+\end{table}
+
+\vspace{-.8cm}
+
+\colorbox{titleColor}{\parbox{6.7in}{\textbf{Education Details}}}
+\\ \\
+\indent \begin{tabular}{ l @{\hskip 0.65in} l @{\hskip 0.90in} l @{\hskip 1.00in} l @{\hskip 0.27in} l }
+\hline
+\textbf{Program} & \textbf{Institute} & \textbf{Year} & \textbf{\%/CGPA} \\ 
+ \hline
+
+Test & Test & Test & Test\\ 
+Test & Test & Test & Test\\ 
+Test & Test & Test & Test\\ 
+\end{tabular}
+
 \end{document}
