--- a/server/routes/latex.tex
+++ b/server/routes/latex.tex
@@ -41,15 +41,15 @@ urlcolor=cyan
 \begin{table}[h!]
 
 \begin{center}
-\begin{tabular}{  l  p{10cm}  p{8cm}}
-\raisebox{-\totalheight}{\includegraphics[scale=.2]{C:/Users/nandha/Desktop/ResumeProject/Web_App_for_resume_generation/server/routes/logoupdated.png}}
+\begin{tabular}{ p{1in}p{4.45in}p{0.8in}}
+\raisebox{-1.05\totalheight}{\includegraphics[width=1.5in]{C:/Users/nandha/Desktop/ResumeProject/Web_App_for_resume_generation/server/routes/logoupdated.png}}
 &
 \begin{itemize}
 \setlength\itemsep{.01em}
 \item[] \textbf{Nandhakumar K}
 \item[] \textbf{B.Tech}
 \item[] \textbf{Indian Institute of Technology Tirupati, India}
-\item[] \textbf{nandha1nks@gmail.com}
+\item[] \textbf{nkskak123@gmail.com}
 \item[] \textbf{undefined}
 \end{itemize}
 \end{tabular}
@@ -65,30 +65,43 @@ urlcolor=cyan
 \textbf{Program} & \textbf{Institute} & \textbf{Year} & \textbf{\%/CGPA} \\ 
  \hline
 
-Summa & kdspal & 2019 & lcd\\ 
+Summa & Summa & Summa & Summa\\ 
 \end{tabular}
 
 \colorbox{titleColor}{\parbox{6.7in}{\textbf{Areas of Interest}}}
 \begin{itemize}\setlength{\itemsep}{1pt}
-\item {{ML}}
+\item {{Summa}}
 \end{itemize}
 
 \colorbox{titleColor}{\parbox{6.7in}{\textbf{Technical Proficiency}}}\\ 
 
 \begin{tabular}{p{1.6in}p{0.1in}p{4.5in}}
-\textbf{\small{hvjbm`}} &: &{{vjbknl;}} \\
+\textbf{\small{Summa}} &: &{{Summa}} \\
 \end{tabular}
+
+\colorbox{titleColor}{\parbox{6.7in}{\textbf{Publications}}} 
+
+    \begin{itemize}
+
+\setlength{\itemsep}{1pt}
+\item summa
+\newline Authors: Summa
+\newline Place of Publication: summa
+\newline Description: Summa
+\newline DOI: Summa
+
+\end{itemize}
 
 \colorbox{titleColor}{\parbox{6.7in}{\textbf{Academic Projects}}}
 
 \begin{itemize*}
 \setlength{\itemsep}{1pt}
-\item \textbf{hvjbknlm}
- \\ {(Guide : hvbnm)}\hfill {\small{{\textbf{[hbnml,;]}}\/}}
+\item \textbf{summa}
+ \\ {(Guide : summa)}\hfill {\small{{\textbf{[summa]}}\/}}
 \begin{itemize*}
 \setlength{\itemsep}{.00pt}
 
-            \item \textbf{Abstract}: ,hjbnkl,hgjbkl;cvbklm;fcgbjkl;hgjkl; 
+            \item \textbf{Abstract}: summa 
 
             \end{itemize*} 
 
@@ -98,12 +111,12 @@ Summa & kdspal & 2019 & lcd\\
 
 \begin{itemize*}
 \setlength{\itemsep}{1pt}
-\item \textbf{ghjbklm}
- \\ {(Guide : hjklm,;)}\hfill {\small{{\textbf{[fghjbnm,;]}}\/}}
+\item \textbf{summa}
+ \\ {(Guide : summa)}\hfill {\small{{\textbf{[summa]}}\/}}
 \begin{itemize*}
 \setlength{\itemsep}{.00pt}
 
-            \item \textbf{Abstract}: dfghjklfcgbjntfghjnktgbhjktfghjfgh 
+            \item \textbf{Abstract}: summma 
 
             \end{itemize*} 
 
@@ -111,22 +124,22 @@ Summa & kdspal & 2019 & lcd\\
 
 \colorbox{titleColor}{\parbox{6.7in}{\textbf{Relevant Courses}}}\\[0.08in]
     \begin{tabular}{p{3.5in}p{3in}p{2.5in}}
-\hspace{0.9pc}$\bullet$ gghbjkl;
+\hspace{0.9pc}$\bullet$ MAchine Learning
 \end{tabular}
 
 \colorbox{titleColor}{\parbox{6.7in}{\textbf{Achievements}}}\\[0.08in]
 
     \begin{itemize} 
  \setlength{\itemsep}{1pt}
-\item gcfbnk,
+\item Summa
 \end{itemize}
 
 \colorbox{titleColor}{\parbox{6.7in}{\textbf{Positions of Responsibility}}}\\
 
-\textbf{fyghjkl;'.}  \hfill {\small{{\textbf{[ghjbklm;]}}}\/} 
+\textbf{summa}  \hfill {\small{{\textbf{[summa]}}}\/} 
 \begin{itemize*} 
 
-        \item gvjhklm;, 
+        \item summa 
 
         \end{itemize*}
 
@@ -135,14 +148,14 @@ Summa & kdspal & 2019 & lcd\\
 \begin{itemize}
 
     \setlength{\itemsep}{1pt}
-\item vbnm,.fghbjkml;, \hfill {\small{{[Mar '19]}}\/}
+\item Summa \hfill 
 \end{itemize}
 
 \colorbox{titleColor}{\parbox{6.7in}{\textbf{Hobbies and Interests}}}
 
 \begin{itemize}
         \setlength{\itemsep}{1pt}
-\item gfhjbklffghjk
+\item Summa
 \end{itemize}
 
 \end{document}
