--- a/server/routes/latex.tex
+++ b/server/routes/latex.tex
@@ -41,16 +41,16 @@ urlcolor=cyan
 \begin{table}[h!]
 
 \begin{center}
-\begin{tabular}{  l  p{10cm}  p{8cm}}
-\raisebox{-\totalheight}{\includegraphics[scale=.2]{C:/Users/deepm/Desktop/WebDevProjects/Web_App_for_resume_generation/server/routes/logoupdated.png}}
+\begin{tabular}{ p{1in}p{4.45in}p{0.8in}}
+\raisebox{-1.05\totalheight}{\includegraphics[width=1.5in]{C:/Users/Shubham/Desktop/Web_App_for_resume_generation-nandha/server/routes/logoupdated.png}}
 &
 \begin{itemize}
 \setlength\itemsep{.01em}
-\item[] \textbf{Test}
-\item[] \textbf{B.Tech}
+\item[] \textbf{undefined}
+\item[] \textbf{undefined}
 \item[] \textbf{Indian Institute of Technology Tirupati, India}
-\item[] \textbf{test@gmail.com}
-\item[] \textbf{Test}
+\item[] \textbf{undefined}
+\item[] \textbf{undefined}
 \end{itemize}
 \end{tabular}
 \end{center}
@@ -58,16 +58,17 @@ urlcolor=cyan
 
 \vspace{-.8cm}
 
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Education Details}}}
-\\ \\
-\indent \begin{tabular}{ l @{\hskip 0.65in} l @{\hskip 0.90in} l @{\hskip 1.00in} l @{\hskip 0.27in} l }
-\hline
-\textbf{Program} & \textbf{Institute} & \textbf{Year} & \textbf{\%/CGPA} \\ 
- \hline
+\colorbox{titleColor}{\parbox{6.7in}{\textbf{Publications}}} 
 
-Test & Test & Test & Test\\ 
-Test & Test & Test & Test\\ 
-Test & Test & Test & Test\\ 
-\end{tabular}
+    \begin{itemize}
+
+\setlength{\itemsep}{1pt}
+\item On the Use of Lanbdas in Python
+\newline Authors: 
+\newline Place of Publication: 
+\newline Description: 
+\newline DOI: 
+
+\end{itemize}
 
 \end{document}
