--- a/server/routes/latex.tex
+++ b/server/routes/latex.tex
@@ -38,3 +38,24 @@ urlcolor=cyan
 
 \begin{document}
 
+\begin{table}[h!]
+
+\begin{center}
+\begin{tabular}{ p{1in}p{4.45in}p{0.8in}}
+\raisebox{-1.05\totalheight}{\includegraphics[width=1.5in]{C:/Users/nandha/Desktop/master1/Web_App_for_resume_generation/server/routes/logoupdated.png}}
+&
+\begin{itemize}
+\setlength\itemsep{.01em}
+\item[] \textbf{yfgu}
+\item[] \textbf{B.Tech}
+\item[] \textbf{Indian Institute of Technology Tirupati, India}
+\item[] \textbf{}
+\item[] \textbf{undefined}
+\end{itemize}
+\end{tabular}
+\end{center}
+\end{table}
+
+\vspace{-.8cm}
+
+\end{document}
