--- a/server/routes/latex.tex
+++ b/server/routes/latex.tex
@@ -46,7 +46,7 @@ urlcolor=cyan
 &
 \begin{itemize}
 \setlength\itemsep{.01em}
-\item[] \textbf{yfgu}
+\item[] \textbf{jhbkl;}
 \item[] \textbf{B.Tech}
 \item[] \textbf{Indian Institute of Technology Tirupati, India}
 \item[] \textbf{}
