--- a/server/routes/latex.tex
+++ b/server/routes/latex.tex
@@ -42,20 +42,125 @@ urlcolor=cyan
 
 \begin{center}
 \begin{tabular}{ p{1in}p{4.45in}p{0.8in}}
-\raisebox{-1.05\totalheight}{\includegraphics[width=1.5in]{C:/Users/nandha/Desktop/master1/Web_App_for_resume_generation/server/routes/logoupdated.png}}
+\raisebox{-1.05\totalheight}{\includegraphics[width=1.5in]{C:/Users/deepm/Desktop/WebDevProjects/Web_App_for_resume_generation/server/routes/logoupdated.png}}
 &
 \begin{itemize}
 \setlength\itemsep{.01em}
-\item[] \textbf{jhbkl;}
-\item[] \textbf{B.Tech}
+\item[] \textbf{Deep}
+\item[] \textbf{M.Tech}
 \item[] \textbf{Indian Institute of Technology Tirupati, India}
-\item[] \textbf{}
+\item[] \textbf{cs17b011@iittp.ac.in}
 \item[] \textbf{undefined}
 \end{itemize}
+&
+\raisebox{-0.8\totalheight}{\includegraphics[width=1in,height=1.3in]{{C:/Users/deepm/Desktop/WebDevProjects/Web_App_for_resume_generation/server/routes/passportphoto.jpg}}}
 \end{tabular}
 \end{center}
 \end{table}
 
 \vspace{-.8cm}
+
+\colorbox{titleColor}{\parbox{6.7in}{\textbf{Education Details}}}
+\\ \\
+\indent \begin{tabular}{ l @{\hskip 0.65in} l @{\hskip 0.90in} l @{\hskip 1.00in} l @{\hskip 0.27in} l }
+\hline
+\textbf{Program} & \textbf{Institute} & \textbf{Year} & \textbf{\%/CGPA} \\ 
+ \hline
+
+A & B & C & 10\\ 
+A & IITTP & 2021 & 10\\ 
+\end{tabular}
+
+\colorbox{titleColor}{\parbox{6.7in}{\textbf{Areas of Interest}}}
+\begin{itemize}\setlength{\itemsep}{1pt}
+\item {{ABC, DEF}}
+\end{itemize}
+
+\colorbox{titleColor}{\parbox{6.7in}{\textbf{Technical Proficiency}}}\\ 
+
+\begin{tabular}{p{1.6in}p{0.1in}p{4.5in}}
+\textbf{\small{Post 2}} &: &{{sdadsa}} \\
+\textbf{\small{Post Two}} &: &{{sdadsa}} \\
+\end{tabular}
+
+\colorbox{titleColor}{\parbox{6.7in}{\textbf{Publications}}} 
+
+    \begin{itemize}
+
+\setlength{\itemsep}{1pt}
+\item A
+\newline Authors: V
+\newline Place of Publication: dsa
+\newline Description: dsadsa
+\newline DOI: dsa
+
+\end{itemize}
+
+\colorbox{titleColor}{\parbox{6.7in}{\textbf{Academic Projects}}}
+
+\begin{itemize*}
+\setlength{\itemsep}{1pt}
+\item \textbf{dsa}
+ \\ {(Guide : dsa)}\hfill {\small{{\textbf{[dsa]}}\/}}
+\begin{itemize*}
+\setlength{\itemsep}{.00pt}
+
+            \item \textbf{Abstract}: dsa 
+
+            \end{itemize*} 
+
+            \end{itemize*} 
+
+\colorbox{titleColor}{\parbox{6.7in}{\textbf{Experience}}}
+
+\begin{itemize*}
+\setlength{\itemsep}{1pt}
+\item \textbf{sda}
+ \\ {(Guide : dsadsadas)}\hfill {\small{{\textbf{[dsadsa]}}\/}}
+\begin{itemize*}
+\setlength{\itemsep}{.00pt}
+
+            \item \textbf{Abstract}: dsadasas 
+
+            \end{itemize*} 
+
+            \end{itemize*} 
+
+\colorbox{titleColor}{\parbox{6.7in}{\textbf{Relevant Courses}}}\\[0.08in]
+    \begin{tabular}{p{3.5in}p{3in}p{2.5in}}
+\hspace{0.9pc}$\bullet$ dsadsa
+\end{tabular}
+
+\colorbox{titleColor}{\parbox{6.7in}{\textbf{Achievements}}}\\[0.08in]
+
+    \begin{itemize} 
+ \setlength{\itemsep}{1pt}
+\item dsadsadsa
+\end{itemize}
+
+\colorbox{titleColor}{\parbox{6.7in}{\textbf{Positions of Responsibility}}}\\
+
+\textbf{dsa}  \hfill {\small{{\textbf{[dsadsa]}}}\/} 
+\begin{itemize*} 
+
+        \item dsa 
+
+        \end{itemize*}
+
+\colorbox{titleColor}{\parbox{6.7in}{\textbf{Extra Curricular activities}}}
+
+\begin{itemize}
+
+    \setlength{\itemsep}{1pt}
+\item dsadsa \hfill 
+\item dsadsa \hfill 
+\end{itemize}
+
+\colorbox{titleColor}{\parbox{6.7in}{\textbf{Hobbies and Interests}}}
+
+\begin{itemize}
+        \setlength{\itemsep}{1pt}
+\item dsadsadsa
+\end{itemize}
 
 \end{document}
