--- a/server/routes/latex.tex
+++ b/server/routes/latex.tex
@@ -42,15 +42,15 @@ urlcolor=cyan
 
 \begin{center}
 \begin{tabular}{ p{1in}p{4.45in}p{0.8in}}
-\raisebox{-1.05\totalheight}{\includegraphics[width=1.5in]{C:/Users/nandha/Desktop/ResumeProject/Web_App_for_resume_generation/server/routes/logoupdated.png}}
+\raisebox{-1.05\totalheight}{\includegraphics[width=1.5in]{C:/Users/deepm/Desktop/WebDevProjects/Web_App_for_resume_generation/server/routes/logoupdated.png}}
 &
 \begin{itemize}
 \setlength\itemsep{.01em}
-\item[] \textbf{\%\{"Nandha"\%\%'kumar'\}\%}
-\item[] \textbf{B.Tech}
+\item[] \textbf{Deep}
+\item[] \textbf{M.Tech}
 \item[] \textbf{Indian Institute of Technology Tirupati, India}
-\item[] \textbf{}
-\item[] \textbf{www.linkedin.com/in/\%\%\%\%\%\%\%\%\%\%\%\%\{\}}
+\item[] \textbf{cs17b011@iittp.ac.in}
+\item[] \textbf{www.linkedin.com/in/Test}
 \end{itemize}
 \end{tabular}
 \end{center}
@@ -65,97 +65,13 @@ urlcolor=cyan
 \textbf{Program} & \textbf{Institute} & \textbf{Year} & \textbf{\%/CGPA} \\ 
  \hline
 
-\%\{'"\%\{'" & \%\{'"\%\{'" & \%\{'"\%\{'" & \%\{'"\%\{'"\\ 
+A & B & C & 100\%\\ 
+D & E & F & 10\\ 
 \end{tabular}
 
 \colorbox{titleColor}{\parbox{6.7in}{\textbf{Areas of Interest}}}
 \begin{itemize}\setlength{\itemsep}{1pt}
-\item {{\%\{'"\%\{'"}}
-\end{itemize}
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Technical Proficiency}}}\\ 
-
-\begin{tabular}{p{1.6in}p{0.1in}p{4.5in}}
-\textbf{\small{\%\{'"\%\{'"}} &: &{{\%\{'"\%\{'"}} \\
-\end{tabular}
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Publications}}} 
-
-    \begin{itemize}
-
-\setlength{\itemsep}{1pt}
-\item \%\{'"\%\{'"
-\newline Authors: \%\{'"\%\{'"
-\newline Place of Publication: \%\{'"\%\{'"
-\newline Description: \%\{'"\%\{'"
-\newline DOI: \%\{'"\%\{'"
-
-\end{itemize}
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Academic Projects}}}
-
-\begin{itemize*}
-\setlength{\itemsep}{1pt}
-\item \textbf{\%\{'"\%\{'"}
- \\ {(Guide : \%\{'"\%\{'")}\hfill {\small{{\textbf{[\%\{'"\%\{'"]}}\/}}
-\begin{itemize*}
-\setlength{\itemsep}{.00pt}
-
-            \item \textbf{Abstract}: \%\{'"\%\{'" 
-
-            \end{itemize*} 
-
-            \end{itemize*} 
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Experience}}}
-
-\begin{itemize*}
-\setlength{\itemsep}{1pt}
-\item \textbf{\%\{'"\%\{'"}
- \\ {(Guide : \%\{'"\%\{'")}\hfill {\small{{\textbf{[\%\{'"\%\{'"]}}\/}}
-\begin{itemize*}
-\setlength{\itemsep}{.00pt}
-
-            \item \textbf{Abstract}: \%\{'"\%\{'" 
-
-            \end{itemize*} 
-
-            \end{itemize*} 
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Relevant Courses}}}\\[0.08in]
-    \begin{tabular}{p{3.5in}p{3in}p{2.5in}}
-\hspace{0.9pc}$\bullet$ \%\{'"\%\{'"
-\end{tabular}
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Achievements}}}\\[0.08in]
-
-    \begin{itemize} 
- \setlength{\itemsep}{1pt}
-\item \%\{'"\%\{'"
-\end{itemize}
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Positions of Responsibility}}}\\
-
-\textbf{\%\{'"\%\{'"}  \hfill {\small{{\textbf{[\%\{'"\%\{'"]}}}\/} 
-\begin{itemize*} 
-
-        \item \%\{'"\%\{'" 
-
-        \end{itemize*}
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Extra Curricular activities}}}
-
-\begin{itemize}
-
-    \setlength{\itemsep}{1pt}
-\item \%\{'"\%\{'" \hfill 
-\end{itemize}
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Hobbies and Interests}}}
-
-\begin{itemize}
-        \setlength{\itemsep}{1pt}
-\item \%\{'"\%\{'"
+\item {{DEF, ABC}}
 \end{itemize}
 
 \end{document}
