Added Seperate folder for images uploaded bu users

--- a/server/routes/latex.tex
+++ b/server/routes/latex.tex
@@ -46,116 +46,18 @@ urlcolor=cyan
 &
 \begin{itemize}
 \setlength\itemsep{.01em}
-\item[] \textbf{\%\{"Nandha"\%\%'kumar'\}\%}
+\item[] \textbf{Nandhakumar K}
 \item[] \textbf{B.Tech}
 \item[] \textbf{Indian Institute of Technology Tirupati, India}
-\item[] \textbf{}
-\item[] \textbf{www.linkedin.com/in/\%\%\%\%\%\%\%\%\%\%\%\%\{\}}
+\item[] \textbf{nandha1nks@gmail.com}
+\item[] \textbf{www.linkedin.com/in/nandha1nks}
 \end{itemize}
+&
+\raisebox{-0.8\totalheight}{\includegraphics[width=1in,height=1.3in]{{C:/Users/nandha/Desktop/ResumeProject/Web_App_for_resume_generation/server/routes/images/55f28e92-b221-42a0-b73c-b33c0f3e4f07.png}}}
 \end{tabular}
 \end{center}
 \end{table}
 
 \vspace{-.8cm}
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Education Details}}}
-\\ \\
-\indent \begin{tabular}{ l @{\hskip 0.65in} l @{\hskip 0.90in} l @{\hskip 1.00in} l @{\hskip 0.27in} l }
-\hline
-\textbf{Program} & \textbf{Institute} & \textbf{Year} & \textbf{\%/CGPA} \\ 
- \hline
-
-\%\{'"\%\{'" & \%\{'"\%\{'" & \%\{'"\%\{'" & \%\{'"\%\{'"\\ 
-\end{tabular}
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Areas of Interest}}}
-\begin{itemize}\setlength{\itemsep}{1pt}
-\item {{\%\{'"\%\{'"}}
-\end{itemize}
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Technical Proficiency}}}\\ 
-
-\begin{tabular}{p{1.6in}p{0.1in}p{4.5in}}
-\textbf{\small{\%\{'"\%\{'"}} &: &{{\%\{'"\%\{'"}} \\
-\end{tabular}
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Publications}}} 
-
-    \begin{itemize}
-
-\setlength{\itemsep}{1pt}
-\item \%\{'"\%\{'"
-\newline Authors: \%\{'"\%\{'"
-\newline Place of Publication: \%\{'"\%\{'"
-\newline Description: \%\{'"\%\{'"
-\newline DOI: \%\{'"\%\{'"
-
-\end{itemize}
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Academic Projects}}}
-
-\begin{itemize*}
-\setlength{\itemsep}{1pt}
-\item \textbf{\%\{'"\%\{'"}
- \\ {(Guide : \%\{'"\%\{'")}\hfill {\small{{\textbf{[\%\{'"\%\{'"]}}\/}}
-\begin{itemize*}
-\setlength{\itemsep}{.00pt}
-
-            \item \textbf{Abstract}: \%\{'"\%\{'" 
-
-            \end{itemize*} 
-
-            \end{itemize*} 
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Experience}}}
-
-\begin{itemize*}
-\setlength{\itemsep}{1pt}
-\item \textbf{\%\{'"\%\{'"}
- \\ {(Guide : \%\{'"\%\{'")}\hfill {\small{{\textbf{[\%\{'"\%\{'"]}}\/}}
-\begin{itemize*}
-\setlength{\itemsep}{.00pt}
-
-            \item \textbf{Abstract}: \%\{'"\%\{'" 
-
-            \end{itemize*} 
-
-            \end{itemize*} 
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Relevant Courses}}}\\[0.08in]
-    \begin{tabular}{p{3.5in}p{3in}p{2.5in}}
-\hspace{0.9pc}$\bullet$ \%\{'"\%\{'"
-\end{tabular}
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Achievements}}}\\[0.08in]
-
-    \begin{itemize} 
- \setlength{\itemsep}{1pt}
-\item \%\{'"\%\{'"
-\end{itemize}
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Positions of Responsibility}}}\\
-
-\textbf{\%\{'"\%\{'"}  \hfill {\small{{\textbf{[\%\{'"\%\{'"]}}}\/} 
-\begin{itemize*} 
-
-        \item \%\{'"\%\{'" 
-
-        \end{itemize*}
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Extra Curricular activities}}}
-
-\begin{itemize}
-
-    \setlength{\itemsep}{1pt}
-\item \%\{'"\%\{'" \hfill 
-\end{itemize}
-
-\colorbox{titleColor}{\parbox{6.7in}{\textbf{Hobbies and Interests}}}
-
-\begin{itemize}
-        \setlength{\itemsep}{1pt}
-\item \%\{'"\%\{'"
-\end{itemize}
 
 \end{document}
